--- a/.env.example
+++ b/.env.example
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=finaltecno
-DB_USERNAME=root
-DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=mail.tecnoweb.org.bo
+DB_PORT=5432
+DB_DATABASE=db_grupo10sa
+DB_USERNAME=grupo10sa
+DB_PASSWORD=grup010grup010
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
